noissue: fix tests